Add items reviews, email sender, and refactor